--- a/src/wagtail_periodic_review/templates/wagtailadmin/periodic_review/home_panel.html
+++ b/src/wagtail_periodic_review/templates/wagtailadmin/periodic_review/home_panel.html
@@ -1,64 +1,68 @@
-{% load i18n wagtailadmin_tags %}
+{% load i18n wagtailadmin_tags wagtailcore_tags %}
 {% if page_list %}
-    <section class="object collapsible">
-        <h2 class="title-wrapper">{{ heading }}</h2>
-        <div class="object-info" style="padding-top:3em;">
-            <p class="help-block {{ description_css_class }}">{{ description }}</p>
-        </div>
-        <div class="object-layout">
-            <table class="listing listing-page">
+    {% panel id=heading|slugify heading=heading %}
+        {% if description %}
+            <div class="help-block {{ description_css_class }}">
+                {% icon name=description_icon %}
+                <p>{{ description }}</p>
+            </div>
+        {% endif %}
 
-                <col />
-                <col width="26%"/>
-                <col width="15%"/>
-                <col width="15%"/>
-                <thead>
+        <table class="listing listing-page">
+            <col />
+            <col width="26%"/>
+            <col width="15%"/>
+            <col width="15%"/>
+            <thead>
+                <tr>
+                    <th class="title">{% trans "Title" %}</th>
+                    <th>{% trans "Type" %}</th>
+                    <th>{% trans "Last review" %}</th>
+                    <th>{% trans "Review due" %}</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for page in page_list %}
                     <tr>
-                        <th class="title">{% trans "Title" %}</th>
-                        <th>{% trans "Type" %}</th>
-                        <th>{% trans "Last review" %}</th>
-                        <th>{% trans "Review due" %}</th>
+                        <td class="title" valign="top">
+                            <div class="title-wrapper">
+                                <a href="{% url 'wagtailadmin_pages:edit' page.id %}" title="{% trans 'Edit this page' %}">{{ page.get_admin_display_title }}</a>
+
+                                {% i18n_enabled as show_locale_labels %}
+                                {% if show_locale_labels and page.locale_id %}
+                                    {% locale_label_from_id page.locale_id as locale_label %}
+                                    <span class="status-tag status-tag--label">{{ locale_label }}</span>
+                                {% endif %}
+                                {% include "wagtailadmin/pages/listing/_privacy_indicator.html" with page=page %}
+                                {% include "wagtailadmin/pages/listing/_locked_indicator.html" with page=page %}
+                            </div>
+                            <ul class="actions">
+                                <li><a href="{% url 'wagtailadmin_pages:edit' page.id %}" class="button button-small button-secondary">{% trans "Edit" %}</a></li>
+                                {% if page.has_unpublished_changes and page.is_previewable %}
+                                    <li><a href="{% url 'wagtailadmin_pages:view_draft' page.id %}" class="button button-small button-secondary" target="_blank" rel="noopener noreferrer">{% trans 'Draft' %}</a></li>
+                                {% endif %}
+                                {% if page.live %}
+                                    {% pageurl page as page_url %}
+                                    {% if page_url is not None %}
+                                        <li><a href="{{ page_url }}" class="button button-small button-secondary" target="_blank" rel="noopener noreferrer">{% trans 'View' %}</a></li>
+                                    {% endif %}
+                                    <li><a href="{% url 'wagtailadmin_pages:unpublish' page.id %}" class="button button-small button-secondary">{% trans 'Unpublish' %}</a></li>
+                                {% endif %}
+                            </ul>
+                        </td>
+                        <td valign="top">
+                            {{ page.specific_class.get_verbose_name }}
+                        </td>
+                        <td valign="top">
+                            {{ page.last_review_date|date:"N Y" }}
+                        </td>
+                        <td valign="top">
+                            {{ page.next_review_date|date:"N Y" }}
+                        </td>
+
                     </tr>
-                </thead>
-                <tbody>
-                    {% for page in page_list %}
-                        <tr>
-                            <td class="title" valign="top">
-                                <div class="title-wrapper">
-                                    <a href="{% url 'wagtailadmin_pages:edit' page.id %}" title="{% trans 'Edit this page' %}">{{ page.get_admin_display_title }}</a>
-
-                                    {% include "wagtailadmin/pages/listing/_privacy_indicator.html" with page=page %}
-                                    {% include "wagtailadmin/pages/listing/_locked_indicator.html" with page=page %}
-                                </div>
-                                <ul class="actions">
-                                    <li><a href="{% url 'wagtailadmin_pages:edit' page.id %}" class="button button-small button-secondary">{% trans "Edit" %}</a></li>
-                                    {% if page.has_unpublished_changes and page.is_previewable %}
-                                        <li><a href="{% url 'wagtailadmin_pages:view_draft' page.id %}" class="button button-small button-secondary" target="_blank" rel="noopener noreferrer">{% trans 'Draft' %}</a></li>
-                                    {% endif %}
-                                    {% if page.live %}
-                                        {% with page_url=page.url %}
-                                            {% if page_url is not None %}
-                                                <li><a href="{{ page_url }}" class="button button-small button-secondary" target="_blank" rel="noopener noreferrer">{% trans 'View' %}</a></li>
-                                            {% endif %}
-                                        {% endwith %}
-                                        <li><a href="{% url 'wagtailadmin_pages:unpublish' page.id %}" class="button button-small button-secondary">{% trans 'Unpublish' %}</a></li>
-                                    {% endif %}
-                                </ul>
-                            </td>
-                            <td valign="top">
-                                {{ page.specific_class.get_verbose_name }}
-                            </td>
-                            <td valign="top">
-                                {{ page.last_review_date|date:"N Y" }}
-                            </td>
-                            <td valign="top">
-                                {{ page.next_review_date|date:"N Y" }}
-                            </td>
-
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
-    </section>
+                {% endfor %}
+            </tbody>
+        </table>
+    {% endpanel %}
 {% endif %}
