--- a/src/wagtail_periodic_review/templates/reports/periodic_review_report.html
+++ b/src/wagtail_periodic_review/templates/reports/periodic_review_report.html
@@ -1,9 +1,10 @@
-{% extends 'wagtailadmin/reports/base_report.html' %}
+{% extends 'wagtailadmin/reports/base_page_report.html' %}
+{% load i18n %}
 
 {% block listing %}
     {% include 'reports/includes/list_with_review_dates.html' %}
 {% endblock %}
 
 {% block no_results %}
-    <p>No pages.</p>
+    <p>{% trans "No pages." %}</p>
 {% endblock %}
