--- a/src/wagtail_periodic_review/templates/reports/periodic_review_report_results.html
+++ b/src/wagtail_periodic_review/templates/reports/periodic_review_report_results.html
@@ -1,10 +1,10 @@
-{% extends 'wagtailadmin/reports/base_page_report.html' %}
+{% extends 'wagtailadmin/reports/base_page_report_results.html' %}
 {% load i18n %}
 
-{% block listing %}
+{% block results %}
     {% include 'reports/includes/list_with_review_dates.html' %}
 {% endblock %}
 
-{% block no_results %}
+{% block no_results_message %}
     <p>{% trans "No pages." %}</p>
 {% endblock %}
